# mcp-medusa

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-release.yml
src/mcp_medusa/: __init__.py  server.py
