[project]
name = "mcp-medusa"
version = "0.1.0"
description = "MCP server for Medusa anime automation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.2.0",
]

[project.scripts]
mcp-medusa = "mcp_medusa.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
